# robasic

./: .gitignore  CMakeLists.txt  aruco_test.py  data.txt  graph.py  main  main.cpp
model/: 001.xml  cube.xml  robot.xml  scene.xml
model/bootcamp/: ball.xml  pendulum.xml
model/robotiq_2f85/: 2f85.xml
model/skydio_x2/: drone.txt  scene.xml  x2.xml
model/universal_robots_ur5e/: ur5e.xml
